Adding initial page for P256K

--- a/Resources/21-dev/static/style.input.css
+++ b/Resources/21-dev/static/style.input.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+
+/* Component-specific styles */
+/* SiteHeader */
+/* SiteHeader Mobile Menu Styles */
 @media (max-width: 767px) {
     .menu-button {
         background: none;
@@ -14,3 +18,4 @@
         display: flex;
     }
 }
+
